<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:tag="tag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/btnPubg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/pubg"
        app:layout_constraintEnd_toStartOf="@+id/btnBrawlStars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPubg"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/pubg"
        app:layout_constraintEnd_toStartOf="@id/tvBrawlStars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPubg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBrawlStars"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/brawl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPubg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBrawlStars"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/brawl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPubg"
        app:layout_constraintTop_toBottomOf="@id/btnBrawlStars" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClashRoyal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/clash"
        app:layout_constraintEnd_toStartOf="@id/btnHomescapes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPubg" />

    <TextView
        android:id="@+id/tvClashRoyal"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/ClashRoyal"
        app:layout_constraintEnd_toStartOf="@id/tvHomescapes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClashRoyal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHomescapes"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/homescapes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnClashRoyal"
        app:layout_constraintTop_toBottomOf="@+id/btnBrawlStars" />

    <TextView
        android:id="@+id/tvHomescapes"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/Homescapes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvClashRoyal"
        app:layout_constraintTop_toBottomOf="@id/btnHomescapes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGenshin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/genshin"
        app:layout_constraintEnd_toStartOf="@id/btnCandy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClashRoyal" />

    <TextView
        android:id="@+id/tvGenshin"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/genshin"
        app:layout_constraintEnd_toStartOf="@id/tvCandy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenshin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCandy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/candy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGenshin"
        app:layout_constraintTop_toBottomOf="@+id/btnHomescapes" />

    <TextView
        android:id="@+id/tvCandy"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/candy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGenshin"
        app:layout_constraintTop_toBottomOf="@id/btnCandy" />
    <TextView
        android:id="@+id/tvFirebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvGenshin"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>